# scuba

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  VERSIONING.md  code_format.py  dev_bootstrap.sh  pyproject.toml  requirements.txt  run_full_tests.py  run_nosetests.py  run_nosetests.sh  run_tests.sh  run_unit_tests.sh  setup.py  static_analysis.sh
.github/workflows/: black.yml  build-test.yml  publish-main.yml  publish-master.yml  publish-release.yml  rust-check.yml
bash_completion/: README.md  scuba
ci/: install_musl-libc.sh  test_setup.sh
dev/: README.md  activate  scuba
doc/: yaml-reference.md
docs/: Makefile  bash_completion.rst  cli.rst  conf.py  configuration.rst  environment.rst  index.rst  installation.rst  introduction.rst
example/: .scuba.yml  common.yml  do_build.sh  run_all.sh  run_example.sh
example/01_basic/: run_example.sh  sample_source.txt
example/02_with_alias/: run_example.sh
example/03_search_up/: .scuba.yml
example/alias_multiline/: .scuba.yml  run_example.sh
example/env_vars/: .scuba.yml  run_example.sh
example/external_yaml_concatenate/: .other.yml  .scuba.yml  run_example.sh
example/external_yaml_nested/: .other.yml  .scuba.yml  run_example.sh
example/external_yaml_simple/: .other.yml  .scuba.yml
example/per_alias_image/: .scuba.yml  run_example.sh
example/scubainit_hooks/: .scuba.yml  run_example.sh
scuba/: .gitignore  __init__.py  __main__.py  argcomplete_stub.py  cmdlineargs.py  compat.py  config.py  constants.py  dockerutil.py  etcfiles.py  filecleanup.py  scuba.py  utils.py  version.py
scubainit/: Cargo.toml  Makefile  rust-toolchain.toml  scubainit.c
scubainit-rs/: .gitignore  Cargo.toml  README  build.sh
scubainit-rs/src/: entfiles.rs  groups.rs  lib.rs  main.rs  shadow.rs  util.rs
scubainit-rs/tests/: groups.rs  passwd.rs  shadow.rs
scubainit/src/: entfiles.rs  groups.rs  main.rs  passwd.rs  shadow.rs  util.rs
scubainit/testdata/: group1  passwd1  shadow1
scubainit/tests/: groups.rs  passwd.rs  shadow.rs
src/: scuba
test-docker-images/: build_all.sh
tests/: conftest.py  const.py  setup_tests.sh  test_cmdlineargs.py  test_compat.py  test_config.py  test_dockerutil.py  test_etcfiles.py  test_filecleanup.py  test_main.py  test_scuba.py  test_utils.py  utils.py
(+8 files in other folders)
