[project]
name = "scuba"
dynamic = ["version"]

authors = [
    {name = "Jonathon Reinhart", email="jonathon.reinhart@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "PyYAML",
    # TODO(#242): Remove when Python 3.7 support is removed.
    "importlib_metadata; python_version<'3.8'",
]
description = "Simplify use of Docker containers for building software"
keywords = ["docker"]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
argcomplete = ["argcomplete>=1.10.1"]

[project.scripts]
scuba = "scuba.__main__:main"

[project.urls]
documentation = "https://scuba.readthedocs.io/"
repository = "https://github.com/JonathonReinhart/scuba"
changelog = "https://github.com/JonathonReinhart/scuba/blob/main/CHANGELOG.md"


[build-system]
# Tells pip to install wheel before trying to install
# from an sdist or from Github.
requires = [
    "wheel",
    "setuptools >= 42.0.0",
    # TODO(#242): Remove when Python 3.7 support is removed.
    "importlib_metadata; python_version<'3.8'",
]


# mypy
[tool.mypy]
packages = ["scuba", "tests"]
warn_unused_configs = true
warn_return_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
