[package]
name = "scubainit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
exec = "0.3.1"
libc = "0.2"
log = "0.4.20"
stderrlog = "0.5.4"
thiserror = "1.0.53"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.8.1"

[profile.release]
# https://stackoverflow.com/a/54842093/119527
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
